--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<% include partials/header %>
 <h1>Index Page</h1>
 
 <% blogs.forEach(function(blog){ %>
@@ -14,3 +15,4 @@
 		</p>
 	</div>
 <% }); %>
+<% include partials/footer %>
