--- a/views/new.ejs
+++ b/views/new.ejs
@@ -1,11 +1,20 @@
 <% include partials/header %>
 <div class="ui main text container segment">
 	<div class="ui huge header">New Blog</div>
-	<form action="/blogs" method="post">
-		<input type="text" name="blog[title]" placeholder="title">
-		<input type="text" name="blog[image]" placeholder="image">
-		<input type="text" name="blog[body]" placeholder="blog post goes here">
-		<input type="submit" name="">
+	<form class="ui form" action="/blogs" method="post">
+		<div class="field">
+			<label>Title</label>
+			<input type="text" name="blog[title]" placeholder="title">
+		</div>
+		<div class="field">
+			<label>Image</label>
+			<input type="text" name="blog[image]" placeholder="image">
+		</div>
+		<div class="field">
+			<label>Blog Content</label>
+			<textarea name="blog[body]"></textarea>
+		</div>
+		<input class="ui purple basic button" type="submit" name="">
 	</form>
 </div>
 <% include partials/footer %>
