Added read more for each blog
Added read more blog route in app.js

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -14,7 +14,7 @@
 			<label>Blog Content</label>
 			<textarea name="blog[body]"></textarea>
 		</div>
-		<input class="ui purple basic button" type="submit" name="">
+		<input class="ui purple big basic button" type="submit" name="">
 	</form>
 </div>
 <% include partials/footer %>
