--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,9 @@
 		<p>
 			<%= blog.body %>
 		</p>
+		<a href="/blogs/<%= blog._id %>">
+			Read More
+		</a>
 	</div>
 <% }); %>
 <% include partials/footer %>
