--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 			<%= blog.created %>
 		</span>
 		<p>
-			<%= blog.body %>
+			<%= blog.body.substring(0,100) %>...
 		</p>
 		<a href="/blogs/<%= blog._id %>">
 			Read More
