--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
 <div class="ui main text container segment">
-	<div class="ui huge header">Edit Blog</div>
+	<div class="ui huge header">Edit <%= blog.title %></div>
 	<form class="ui form" action="/blogs" method="post">
 		<div class="field">
 			<label>Title</label>
