--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,15 +4,15 @@
 	<form class="ui form" action="/blogs" method="post">
 		<div class="field">
 			<label>Title</label>
-			<input type="text" name="blog[title]" placeholder="title">
+			<input type="text" name="blog[title]" value="<%= blog.title %>">
 		</div>
 		<div class="field">
 			<label>Image</label>
-			<input type="text" name="blog[image]" placeholder="image">
+			<input type="text" name="blog[image]" value="<%= blog.image %>">
 		</div>
 		<div class="field">
 			<label>Blog Content</label>
-			<textarea name="blog[body]"></textarea>
+			<textarea name="blog[body]"><%= blog.body %></textarea>
 		</div>
 		<input class="ui purple big basic button" type="submit" name="">
 	</form>
