--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,6 +10,9 @@
 			<div class="description">
 				<p><%- blog.body %></p>
 			</div>
+			<form action="/blogs/<%= blog_.id %>?_method=DELETE" method="post">
+				<button class="ui red basic button">Delete</button>
+			</form>
 		</div>
 	</div>
 </div>
