--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,7 +10,7 @@
 			<div class="description">
 				<p><%- blog.body %></p>
 			</div>
-			<form action="/blogs/<%= blog_.id %>?_method=DELETE" method="post">
+			<form action="/blogs/<%= blog._id %>?_method=DELETE" method="post">
 				<button class="ui red basic button">Delete</button>
 			</form>
 		</div>
