--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,7 +11,7 @@
 				<p><%- blog.body %></p>
 			</div>
 			<a class="ui orange basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
-			<form action="/blogs/<%= blog._id %>?_method=DELETE" method="post">
+			<form id="delete" action="/blogs/<%= blog._id %>?_method=DELETE" method="post">
 				<button class="ui red basic button">Delete</button>
 			</form>
 		</div>
